[package]
name = "rebar-phylo"
version = "0.3.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.2",   default-features = false }
itertools  = { version = "0.12.0",  default-features = false, features = ["use_std"] }
num-traits = { version = "0.2.17",  default-features = false }
petgraph   = { version = "0.6.3",   default-features = false }
serde      = { version = "1.0.163", default-features = false, optional = true }
serde_json = { version = "1.0.96",  default-features = false, optional = true }

# docs cmd
# cargo rustdoc --open -- --html-in-header=assets/docs/header.html --html-after-content=assets/docs/after-content.html

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "serde/derive", "serde_json/std", "petgraph/serde-1"]
