[package]
name = "rebar-table"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino      = { version = "1.1.6",   default-features = false, features = ["serde1"] }
color-eyre  = { version = "0.6.2",   default-features = false }
itertools   = { version = "0.12.0",  default-features = false, features = ["use_std"] }
serde       = { version = "1.0.163", default-features = false, features = ["derive"] }
rebar-utils = { version = "0.3.0",   default-features = false, path = "../rebar-utils" }
tempfile    = { version = "3.8.1",   default-features = false }
